# urath

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  dev.sh
.github/workflows/: release.yml
crates/urath-core/: Cargo.toml
crates/urath-core/benches/: greedy_mesher.rs  surface_nets.rs
crates/urath-core/src/: ao.rs  block.rs  chunk.rs  error.rs  greedy.rs  lib.rs  mesh_output.rs  mesher.rs  noise.rs  surface_nets.rs  terrain.rs
crates/urath-wasm/: Cargo.toml
crates/urath-wasm/src/: lib.rs
crates/voxel-mesh-core/: Cargo.toml
crates/voxel-mesh-core/benches/: greedy_mesher.rs
crates/voxel-mesh-core/src/: chunk.rs  greedy.rs  lib.rs
crates/voxel-mesh-wasm/: Cargo.toml
crates/voxel-mesh-wasm/src/: lib.rs
examples/demo/: index.html  mesh-worker.js  package-lock.json  package.json  perf.mjs  vite.config.js
