[package]
name = "voxel-mesh-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "High-performance voxel meshing algorithms"

[dependencies]
thiserror.workspace = true

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "greedy_mesher"
harness = false
